# Manaless

./: .gitignore  BACKLOG.md  README.md  pyproject.toml  run.ps1  run.sh
data/: .gitkeep  game-changers.json
docs/: CLAUDE.md  HANDOFF.md  README.md  architecture.md  bracket-evaluator.md  buy-pipeline.md  prior-art.md  verified.md  win-conditions.md
src/manaless/: __init__.py  bracket.py  buy.py  card_category.py  collection.py  dck_export.py  deck_builder.py  deck_model.py  edhrec_client.py  paths.py  scryfall_client.py  spellbook_client.py  spike.py  win_conditions.py
src/manaless/http/: __init__.py  cache.py  client.py  rate_limiter.py
src/manaless/web/: __init__.py  __main__.py  app.py  readout.py  session.py
src/manaless/web/static/: style.css  ui.js
src/manaless/web/templates/: _cardlist.html  _count.html  _palette.html  _readouts.html  _readouts_lazy.html  _readouts_panel.html  _swap_suggestions.html  _update.html  base.html  build.html  buy_missing.html  collection.html  commanders.html  decks.html  index.html
tests/: test_bracket.py  test_buy.py  test_cache.py  test_card_category.py  test_client.py  test_collection.py  test_dck_export.py  test_deck_builder.py  test_deck_model.py  test_edhrec_client.py  test_edhrec_slug.py  test_rate_limiter.py  test_scryfall_client.py  test_spellbook_client.py  test_win_conditions.py
tests/test_web/: test_app.py  test_readout.py  test_session.py
