[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "manaless"
version = "0.1.0"
description = "Try-before-you-buy funnel for paper MTG Commander: browse curated decklists, substitute with live win-condition + bracket feedback, export to XMage, then (rarely) buy."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/manaless"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
