[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "manaless"
version = "0.1.0"
description = "Try-before-you-buy funnel for paper MTG Commander: browse curated decklists, substitute with live win-condition + bracket feedback, export to XMage, then (rarely) buy."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
# Build-step-4 substitution builder. Kept out of the core deps so the pipeline
# stays importable headless (CLAUDE.md §2). HTMX is vendored in web/static/.
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/manaless"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
